improve app icon

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -145,7 +145,7 @@
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="Mouse.h" />
-    <ClInclude Include="Resource.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ChiliException.cpp" />
@@ -220,7 +220,10 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Chili Framework 2016.res" />
+    <ResourceCompile Include="Resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Chili.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
