capitalize Resource.h (OCD)

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -145,7 +145,7 @@
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="Mouse.h" />
-    <ClInclude Include="resource.h" />
+    <ClInclude Include="Resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DXErr.cpp" />
