--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -144,8 +144,13 @@
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="MainWindow.h" />
+    <ClInclude Include="Mat3.h" />
     <ClInclude Include="Mouse.h" />
+    <ClInclude Include="Rasterizer.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Triangle.h" />
+    <ClInclude Include="Vec2.h" />
+    <ClInclude Include="Vec3.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DXErr.cpp" />
@@ -154,7 +159,12 @@
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
+    <ClCompile Include="Mat3.cpp" />
     <ClCompile Include="Mouse.cpp" />
+    <ClCompile Include="Rasterizer.cpp" />
+    <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="Vec2.cpp" />
+    <ClCompile Include="Vec3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="FramebufferPS.hlsl">
